[package]
name = "tunik"
version = "0.1.0"
edition = "2021"
authors = ["Orhan Balci <orhanbalci@gmail.com>"]
description="ratatui components"
homepage="https://github.com/orhanbalci"
repository="https://github.com/orhanbalci/tunik.git"
keywords=["tui","component","terminal"]
categories=["command-line-interface"]
license="MIT"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
unicode-width = "0.1"
fuzzy-matcher = "0.3"

[dev-dependencies]
tui-input = "0.6"
crossterm = "0.25"
serde_json = "1.0.94"
